--- a/apps/nasa-images/src/app/app.component.html
+++ b/apps/nasa-images/src/app/app.component.html
@@ -1,18 +1,22 @@
-<div class="flex flex-col h-screen">
-  <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
-    <span>My App</span>
-    <span style="flex: 1 1 auto"></span>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="sidenav.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
-  </mat-toolbar>
+<mat-toolbar class="bg-primary-light">
+  <button mat-icon-button aria-label="Example icon-button with share icon">
+    <mat-icon>share</mat-icon>
+  </button>
+  <span class="text-md">My App</span>
+  <span class="flex-auto"></span>
+  <button mat-icon-button aria-label="Example icon-button with menu icon" (click)="sidenav.toggle()">
+    <mat-icon>menu</mat-icon>
+  </button>
+</mat-toolbar>
 
-  <mat-sidenav-container class="example-container">
-    <mat-sidenav #sidenav mode="side" position="end" [(opened)]="opened"> Sidenav content </mat-sidenav>
+<mat-sidenav-container>
+  <mat-sidenav #sidenav mode="side" position="end" [(opened)]="opened"> Sidenav content </mat-sidenav>
 
-    <mat-sidenav-content> Content </mat-sidenav-content>
-  </mat-sidenav-container>
-</div>
+  <mat-sidenav-content>
+    <main class="p-md">
+      <div class="bg-secondary-light">
+        Angular is an application design framework and development platform for creating efficient and sophisticated single-page apps.
+      </div>
+    </main>
+  </mat-sidenav-content>
+</mat-sidenav-container>
