refactor(shared): #10 add a shared assets library to share icons and other

--- a/apps/nasa-images/src/app/app.component.html
+++ b/apps/nasa-images/src/app/app.component.html
@@ -27,7 +27,7 @@
 
   <plastikspace-ui-footer>
     <div content class="flex items-center justify-center gap-sm">
-      <svg-icon svgClass="fill-white w-xl h-xl" src="assets/img/plastikaweb.svg"></svg-icon>
+      <svg-icon svgClass="fill-white w-xl h-xl" src="/assets/svg/plastikaweb.svg"></svg-icon>
       <span
         >© 2008-{{ currentYear | date: 'yyyy' }}
         <a class="underline underline-offset-2" href="https://www.plastikaweb.com" target="_blank">Plastikaweb</a> | Carlos Matheu |
