refactor(shared): #30 add UI prefix to shared header lib

--- a/apps/nasa-images/src/app/app.component.html
+++ b/apps/nasa-images/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col h-screen">
-  <plastikspace-header>
+  <plastikspace-ui-header>
     <div start>
       <a class="flex items-center content-center justify-between" href="">
         <svg-icon src="assets/img/nasa.svg" svgClass="bg-white text-black w-[100px]"></svg-icon>
@@ -11,7 +11,7 @@
         <mat-icon>menu</mat-icon>
       </button>
     </div>
-  </plastikspace-header>
+  </plastikspace-ui-header>
 
   <mat-sidenav-container>
     <mat-sidenav #sidenav mode="side" position="end" [(opened)]="opened"> Sidenav content </mat-sidenav>
