fix(core/cms-layout): #41 create an alternative header title prop for small screens
ISSUES CLOSED: #41

--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -4,7 +4,8 @@
       <ng-container *ngIf="sidenavPosition === 'start'" [ngTemplateOutlet]="toggleSidenavButton"></ng-container>
       <a class="flex items-center content-center justify-between" href="">
         <svg-icon *ngIf="headerConfig.mainIcon as icon" [src]="icon.iconPath" [svgClass]="icon.svgClass"></svg-icon>
-        <span class="text-md">{{ headerConfig.mainTitle }}</span>
+        <span class="block md:hidden text-md">{{ headerConfig.title }}</span>
+        <span class="hidden md:block text-md">{{ headerConfig.extendedTitle || headerConfig.title }}</span>
       </a>
     </div>
     <div end *ngIf="sidenavPosition === 'end'">
