--- a/libs/nasa-images/feature/search/src/lib/nasa-images-feature-search/nasa-images-feature-search.component.html
+++ b/libs/nasa-images/feature/search/src/lib/nasa-images-feature-search/nasa-images-feature-search.component.html
@@ -1,3 +1,8 @@
 <h1>Images</h1>
-
-{{ images$ | ngrxPush | json }}
+<plastik-shared-table
+  *ngIf="{ data: images$ | ngrxPush, tableStructure } as obs"
+  [data]="obs?.data || []"
+  [columnProperties]="obs.tableStructure.columnProperties || []"
+  [resultsLength]="(count$ | ngrxPush) || 0"
+>
+</plastik-shared-table>
