feat(shared/form): #6 add a shared form comnponent and use it to filter nasa images
ISSUES CLOSED: #6

--- a/apps/nasa-images/src/styles.scss
+++ b/apps/nasa-images/src/styles.scss
@@ -27,6 +27,7 @@ $nasa-images-theme: mat.define-light-theme(
   --secondary-dark: #c62d1f;
 
   /* Spacing */
+  --spacing-sub: 0.5rem;
   --spacing-sm: 1rem;
   --spacing-md: 1.5rem;
   --spacing-lg: 2rem;
