feat(shared/table/ui): #4 add table pagination and apply it to nasa images search page
ISSUES CLOSED: #4

--- a/libs/core/cms-layout/ui/sidenav/src/lib/core-cms-layout-ui-sidenav/core-cms-layout-ui-sidenav.component.html
+++ b/libs/core/cms-layout/ui/sidenav/src/lib/core-cms-layout-ui-sidenav/core-cms-layout-ui-sidenav.component.html
@@ -19,8 +19,8 @@
     </div>
   </mat-sidenav>
 
-  <mat-sidenav-content role="main">
-    <main class="bg-white p-md h-[calc(100vh-129px)]">
+  <mat-sidenav-content class="scroll-smooth" role="main">
+    <main id="mainContent" class="bg-white p-md h-[calc(100vh-129px)]">
       <div>
         <router-outlet></router-outlet>
       </div>
