--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.scss
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.scss
@@ -1,4 +1,7 @@
 :host ::ng-deep {
+  .mat-mdc-table mat-row.mat-mdc-row {
+    @apply min-h-[120px];
+  }
   .mat-row {
     @apply items-stretch;
   }
