feat(shared/activity/ui): #11 add a shared linear activity library
ISSUES CLOSED: #11

--- a/apps/nasa-images/src/styles.scss
+++ b/apps/nasa-images/src/styles.scss
@@ -72,3 +72,8 @@ h3 {
 h4 {
   @apply text-sm;
 }
+
+.mat-mdc-progress-bar {
+  @apply bg-secondary-light;
+  --mdc-linear-progress-active-indicator-color: var(--secondary-dark);
+}
