--- a/libs/core/cms-layout/ui/sidenav/src/lib/core-cms-layout-ui-sidenav/core-cms-layout-ui-sidenav.component.html
+++ b/libs/core/cms-layout/ui/sidenav/src/lib/core-cms-layout-ui-sidenav/core-cms-layout-ui-sidenav.component.html
@@ -1,3 +1,5 @@
+<plastik-shared-activity-ui-linear [active]="true"></plastik-shared-activity-ui-linear>
+
 <mat-sidenav-container (backdropClick)="onToggleSidenav(false)">
   <mat-sidenav
     role="navigation"
