feat(shared/activity/data-access): #11 add a shared activity store module
attach it to the nasa images store effects

ISSUES CLOSED: #11

--- a/apps/nasa-images/src/styles.scss
+++ b/apps/nasa-images/src/styles.scss
@@ -27,6 +27,7 @@ $nasa-images-theme: mat.define-light-theme(
   --secondary-dark: #c62d1f;
 
   /* Spacing */
+  --spacing-tiny: 0.25rem;
   --spacing-sub: 0.5rem;
   --spacing-sm: 1rem;
   --spacing-md: 1.5rem;
@@ -75,5 +76,6 @@ h4 {
 
 .mat-mdc-progress-bar {
   @apply bg-secondary-light;
+  --mdc-linear-progress-track-height: var(--spacing-tiny);
   --mdc-linear-progress-active-indicator-color: var(--secondary-dark);
 }
