--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -15,6 +15,8 @@
     </div>
   </plastik-core-cms-layout-ui-header>
 
+  <plastik-shared-activity-ui-linear [active]="(activity$ | ngrxPush) || false"></plastik-shared-activity-ui-linear>
+
   <plastik-core-cms-layout-ui-sidenav
     [position]="sidenavPosition"
     [mode]="(isMobile$ | ngrxPush) ? 'over' : 'side'"
