--- a/apps/nasa-images/src/styles/styles.scss
+++ b/apps/nasa-images/src/styles/styles.scss
@@ -13,6 +13,8 @@ $nasa-images-theme: mat.define-light-theme(
 
 @include mat.all-component-themes($nasa-images-theme);
 
+@import 'loading';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -46,6 +48,13 @@ $nasa-images-theme: mat.define-light-theme(
 
 html {
   font-size: 14px;
+  @apply box-border overflow-hidden;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 @screen sm {
