--- a/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
+++ b/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
@@ -21,4 +21,5 @@
   [paginationVisibility]="obs.tableStructure?.paginationVisibility"
   (changePagination)="onChangePagination($event)"
 >
+  <plastik-nasa-images-search-ui-no-results noResults></plastik-nasa-images-search-ui-no-results>
 </plastik-shared-table>
