fix(shared/table/ui): #110 fix error when loading table with intermediate pagination
ISSUES CLOSED: #110

--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -27,8 +27,8 @@
         'paginator--hide': paginationVisibility?.hideRangeLabel,
         'paginator--hide-range-buttons': paginationVisibility?.hideRangeButtons
       }"
-      [pageIndex]="matPaginator?.pageIndex"
-      [pageSize]="matPaginator?.pageSize"
+      [pageIndex]="pagination?.pageIndex"
+      [pageSize]="pagination?.pageSize"
       [pageSizeOptions]="pageSizeOptions"
       [showFirstLastButtons]="!paginationVisibility?.hidePaginationFirstLastButtons"
       aria-label="Select page"
