perf(shared/formatters): #108 set custom formatting for table index cells
ISSUES CLOSED: #108

--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -10,7 +10,7 @@
           <div
             class="table-cell table__cell--default"
             [ngClass]="column.cssClasses?.[1] || ''"
-            [innerHTML]="row | safeFormatted : column : i + 1"
+            [innerHTML]="row | safeFormatted : column : i + 1 : pagination"
           ></div>
         </mat-cell>
       </ng-container>
