--- a/apps/nasa-images/src/styles/styles.scss
+++ b/apps/nasa-images/src/styles/styles.scss
@@ -19,69 +19,86 @@ $nasa-images-theme: mat.define-light-theme(
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  /* Colors */
-  --primary-light: #105bd8;
-  --primary: #19418c;
-  --primary-dark: #061f4a;
-  --secondary-light: #e59892;
-  --secondary: #dd361c;
-  --secondary-dark: #c62d1f;
+@layer base {
+  :root {
+    /* Colors */
+    --primary-light: #105bd8;
+    --primary: #19418c;
+    --primary-dark: #061f4a;
+    --secondary-light: #e59892;
+    --secondary: #dd361c;
+    --secondary-dark: #c62d1f;
 
-  /* Spacing */
-  --spacing-tiny: 0.25rem;
-  --spacing-sub: 0.5rem;
-  --spacing-sm: 1rem;
-  --spacing-md: 1.5rem;
-  --spacing-lg: 2rem;
-  --spacing-xl: 3rem;
-  --spacing-xxl: 6rem;
+    /* Spacing */
+    --spacing-tiny: 0.25rem;
+    --spacing-sub: 0.5rem;
+    --spacing-sm: 1rem;
+    --spacing-md: 1.5rem;
+    --spacing-lg: 2rem;
+    --spacing-xl: 3rem;
+    --spacing-xxl: 6rem;
 
-  /* Font Size */
-  --font-size-sub: 0.7rem;
-  --font-size-sm: 0.85rem;
-  --font-size-base: 1rem;
-  --font-size-md: 1.4rem;
-  --font-size-lg: 1.8rem;
-  --font-size-xl: 2.2rem;
-  --font-size-xxl: 2.6rem;
-}
-
-html {
-  font-size: 14px;
-  @apply box-border overflow-hidden;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-@screen sm {
-  html {
-    font-size: 13px;
+    /* Font Size */
+    --font-size-sub: 0.7rem;
+    --font-size-sm: 0.85rem;
+    --font-size-base: 1rem;
+    --font-size-md: 1.4rem;
+    --font-size-lg: 1.8rem;
+    --font-size-xl: 2.2rem;
+    --font-size-xxl: 2.6rem;
   }
-}
 
-body {
-  @apply text-gray-30 font-light font-poppins;
-}
+  html {
+    font-size: 14px;
+    @apply box-border overflow-hidden;
+  }
 
-h1 {
-  @apply text-xxl;
-}
+  *,
+  *:before,
+  *:after {
+    box-sizing: inherit;
+  }
 
-h2 {
-  @apply text-xl;
-}
+  @screen sm {
+    html {
+      font-size: 13px;
+    }
+  }
 
-h3 {
-  @apply text-lg;
-}
+  body {
+    @apply text-gray-30 font-light font-poppins;
+  }
 
-h4 {
-  @apply text-md;
+  h1 {
+    @apply text-xxl;
+  }
+
+  h2 {
+    @apply text-xl text-primary-dark;
+  }
+
+  h3 {
+    @apply text-lg;
+  }
+
+  h4 {
+    @apply text-md;
+  }
+
+  ul {
+    @apply list-disc list-inside;
+  }
+
+  li {
+    @apply ml-sub mb-sub;
+  }
+
+  a {
+    @apply text-secondary-dark;
+    &:hover {
+      @apply underline underline-offset-2;
+    }
+  }
 }
 
 .mat-mdc-progress-bar {
