--- a/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
+++ b/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
@@ -1,37 +1,41 @@
-<h1>Search Images</h1>
+<h2 class="flex items-center gap-sm" *ngIf="routeInfo$ | ngrxPush as info">
+  <mat-icon> {{ info.icon }} </mat-icon> <span>{{ info.title }}</span>
+</h2>
 
-<!-- filtering -->
-<plastik-shared-form-feature
-  class="flex flex-row items-end content-center justify-between mx-0 my-md filters-box"
-  [submitAvailable]="false"
-  [fields]="(formStructure$ | ngrxPush) || []"
-  [model]="{}"
-  (changeEvent)="onChange($event)"
->
-</plastik-shared-form-feature>
+<section>
+  <!-- filtering -->
+  <plastik-shared-form-feature
+    class="flex flex-row items-end content-center justify-between mx-0 my-md filters-box"
+    [submitAvailable]="false"
+    [fields]="(formStructure$ | ngrxPush) || []"
+    [model]="{}"
+    (changeEvent)="onChange($event)"
+  >
+  </plastik-shared-form-feature>
 
-<!-- table -->
-<plastik-shared-table
-  *ngIf="{ data: images$ | ngrxPush, tableStructure: tableStructure$ | ngrxPush } as obs"
-  [data]="obs?.data || []"
-  [columnProperties]="obs.tableStructure?.columnProperties || []"
-  [resultsLength]="(count$ | ngrxPush) || 0"
-  [pageSizeOptions]="obs.tableStructure?.pageSizeOptions || []"
-  [pagination]="obs.tableStructure?.pagination"
-  [paginationVisibility]="obs.tableStructure?.paginationVisibility"
-  (changePagination)="onChangePagination($event)"
->
-  <plastik-nasa-images-search-ui-no-results noResults *ngIf="isActiveSearch$ | ngrxPush; else noValidSearch">
-    <span icon> search_off </span>
-    <span title>No results found</span>
-    <span message>We can't find any item matching your search.</span>
-  </plastik-nasa-images-search-ui-no-results>
-
-  <ng-template #noValidSearch>
-    <plastik-nasa-images-search-ui-no-results noResults>
-      <span icon> search_on </span>
-      <span title>NASA images search</span>
-      <span message>Use the filter to find related NASA pictures.<br />You must provide a valid matching string.</span>
+  <!-- table -->
+  <plastik-shared-table
+    *ngIf="{ data: images$ | ngrxPush, tableStructure: tableStructure$ | ngrxPush } as obs"
+    [data]="obs?.data || []"
+    [columnProperties]="obs.tableStructure?.columnProperties || []"
+    [resultsLength]="(count$ | ngrxPush) || 0"
+    [pageSizeOptions]="obs.tableStructure?.pageSizeOptions || []"
+    [pagination]="obs.tableStructure?.pagination"
+    [paginationVisibility]="obs.tableStructure?.paginationVisibility"
+    (changePagination)="onChangePagination($event)"
+  >
+    <plastik-nasa-images-search-ui-no-results noResults *ngIf="isActiveSearch$ | ngrxPush; else noValidSearch">
+      <span icon> search_off </span>
+      <span title>No results found</span>
+      <span message>We can't find any item matching your search.</span>
     </plastik-nasa-images-search-ui-no-results>
-  </ng-template>
-</plastik-shared-table>
+
+    <ng-template #noValidSearch>
+      <plastik-nasa-images-search-ui-no-results noResults>
+        <span icon> search_on </span>
+        <span title>NASA images search</span>
+        <span message>Use the filter to find related NASA pictures.<br />You must provide a valid matching string.</span>
+      </plastik-nasa-images-search-ui-no-results>
+    </ng-template>
+  </plastik-shared-table>
+</section>
