--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -37,7 +37,12 @@
     (toggleSidenav)="onToggleSidenav()"
   >
     <mat-list menu-items>
-      <mat-list-item class="rounded-lg" routerLinkActive="bg-gray-10" *ngFor="let item of sidenavConfig" [routerLink]="item?.route">
+      <mat-list-item
+        class="rounded-lg my-tiny h-xll hover:bg-gray-5 active:bg-gray-5 focus:before:bg-gray-5"
+        routerLinkActive="bg-gray-5"
+        *ngFor="let item of sidenavConfig"
+        [routerLink]="item?.route"
+      >
         <div class="flex content-center justify-start gap-sm">
           <mat-icon> {{ item.icon }} </mat-icon>
           <span>{{ item.title }}</span>
