feat(nasa-images): #137 dddd

--- a/libs/core/cms-layout/ui/footer/src/lib/core-cms-layout-ui-footer.component.html
+++ b/libs/core/cms-layout/ui/footer/src/lib/core-cms-layout-ui-footer.component.html
@@ -1,4 +1,5 @@
 <footer class="text-white bg-primary p-sm">
+  <span>AAAA</span>
   <div class="text-center justify-self-center">
     <ng-content select="[content]"></ng-content>
   </div>
