--- a/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
+++ b/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
@@ -5,7 +5,7 @@
 <section>
   <!-- filtering -->
   <plastik-shared-form-feature
-    class="flex flex-row items-end content-center justify-between mx-0 my-md filters-box"
+    class="flex flex-row items-end content-center justify-between mx-0 mb-0 mt-sm md:my-md filters-box"
     [submitAvailable]="false"
     [fields]="(formStructure$ | ngrxPush) || []"
     [model]="{}"
