--- a/libs/nasa-images/search/ui/no-results/src/lib/nasa-images-search-ui-no-results/nasa-images-search-ui-no-results.component.html
+++ b/libs/nasa-images/search/ui/no-results/src/lib/nasa-images-search-ui-no-results/nasa-images-search-ui-no-results.component.html
@@ -1,4 +1,4 @@
-<div class="w-5/6 mx-auto text-center my-xl">
+<div class="w-5/6 mx-auto mt-0 text-center mb-sm md:my-xl">
   <h3 class="flex flex-col items-center">
     <mat-icon aria-hidden="true" class="text-[15rem] text-secondary-dark h-[15rem] w-[15rem]">
       <ng-content select="[icon]"></ng-content>
