fix(nasa-images/faqs): #121 review and fix h3 styles for /faqs
ISSUES CLOSED: #121

--- a/libs/nasa-images/faqs/feature/src/lib/nasa-images-faqs-feature/nasa-images-faqs-feature.component.html
+++ b/libs/nasa-images/faqs/feature/src/lib/nasa-images-faqs-feature/nasa-images-faqs-feature.component.html
@@ -7,9 +7,9 @@
     <mat-accordion>
       <mat-expansion-panel *ngFor="let faq of faqs$ | ngrxPush">
         <mat-expansion-panel-header class="h-xxl">
-          <mat-panel-title
-            ><h3 class="text-md text-primary">{{ faq.question }}</h3></mat-panel-title
-          >
+          <mat-panel-title>
+            <h3 class="text-primary">{{ faq.question }}</h3>
+          </mat-panel-title>
           <mat-panel-description></mat-panel-description>
         </mat-expansion-panel-header>
         <div [innerHTML]="faq.answer"></div>
