fix(nasa-images/search): #173 on resetting /search route, the q input should be resetted
ISSUES CLOSED: #173

--- a/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
+++ b/libs/nasa-images/search/feature/src/lib/nasa-images-search-feature/nasa-images-search-feature.component.html
@@ -8,7 +8,7 @@
     class="flex flex-row items-end content-center justify-between mx-0 mb-0 mt-sm md:my-md filters-box"
     [submitAvailable]="false"
     [fields]="(formStructure$ | ngrxPush) || []"
-    [model]="{}"
+    [model]="(formModel$ | ngrxPush) || {}"
     (changeEvent)="onChange($event)"
   >
   </plastik-shared-form-feature>
